fixed a display bug on mobile devices

--- a/src/components/addbusiness/addbusiness.css
+++ b/src/components/addbusiness/addbusiness.css
@@ -201,7 +201,7 @@ select {
 
 .measure {
   width: 22em;
-  max-height: 550px;
+  max-height: 270px;
   overflow-y: auto;
   overflow-x: hidden;
   padding: 20px;
